--- a/Files/editor.css
+++ b/Files/editor.css
@@ -1,3 +1,41 @@
+@media (min-width: 80rem) {
+    div.full {
+        width: auto;
+        margin: 0 0.6rem;
+    }
+
+    div.content {
+        flex: 1;
+    }
+
+    div.sidebar {
+        flex-basis: 20rem;
+        flex-grow: 0;
+        flex-shrink: 0;
+    }
+
+    div.nav {
+        width: auto;
+        margin: 0.6rem 0 0 0;
+        left: 0.6rem;
+        right: 0.6rem;
+    }
+}
+
+@media (min-width: 120rem) {
+    div.full {
+        width: calc(118.8rem - (100vw - 100%));
+        margin: 0 auto;
+    }
+
+    div.nav {
+        width: calc(118.8rem - (100vw - 100%));
+        margin: 0.6rem auto 0 auto;
+        left: 0;
+        right: 0;
+    }
+}
+
 div.editor {
     display: flex; flex-flow: column;
 }
